--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ body{
     text-align: center;
 }
 h1{
-    text-aling: center;
+    text-align: center;
     display: inline-block;
     margin-top: 2rem;
     font-size: 3rem;
